trunk/Archive2/84/ef5a5b915d4667/output
main.cpp: In function 'int main()':
main.cpp:10:13: error: call of overloaded 'f(T, int)' is ambiguous
     f(T(), 0);
             ^
main.cpp:10:13: note: candidates are:
main.cpp:7:6: note: void f(U, int)
 void f(U, int);
      ^
main.cpp:8:27: note: void f(T, ...) [with T = T]
 template<typename T> void f(T t, ...);
                           ^
